--- a/doc/sections/Introduction.tex
+++ b/doc/sections/Introduction.tex
@@ -53,7 +53,7 @@ The trained model is able to create valid mappings for the SE by learning about 
 
 The key contributions of this paper are as follows:
 \begin{enumerate}
-    \item A Reinforcement Learning methodology that is able to map the instructions from a given DFG to the processing elements in the SE and has the potential to be reused across computation graphs.
+    \item A Reinforcement Learning methodology that is able to map the instructions from a given DFG to the processing elements in the SE and has the potential to be reused across SDF graphs.
     \item An analysis of different factors that impacts the quality of mappings obtained.
 \end{enumerate}
 
