--- a/doc/sections/Results.tex
+++ b/doc/sections/Results.tex
@@ -10,14 +10,14 @@ Other SE device configurations are possible.
 \begin{figure}[h]
   \centering
   \includegraphics[scale=0.4]{fig/ifft_graph.pdf}
-  \caption{IFFT application computation graph.}
+  \caption{IFFT application SDF graph.}
   \label{fig:ifft_graph}
 \end{figure}
 
 
 We also benchmarked our RL framework against a collection of random directed graphs meant to simulate real life workloads. 
 We compare a baseline PPO method composed of 3 stacked MLPs against an actor model with the proposed Global Graph Attention (GGA) module.
-We evaluate these models on varying computation graphs with different complexities by increasing number of nodes in the graph. 
+We evaluate these models on varying SDF graphs with different complexities by increasing number of nodes in the graph. 
 We also tested on a larger device with 64 tiles.
 In Fig. \ref{fig:nodes_graph}, we observe that the RL approach finds mappings for a variety of computation graphs, and GGA
 improves the best schedule found for the same number of training epochs. The GGA also finds improved schedule in terms of clock cycles taken for a larger device configuration. 
@@ -29,7 +29,7 @@ The cycle count is number of SE execution steps taken to process all nodes for a
   \includegraphics[width=\linewidth]{fig/nodes_graph.pdf}
   \caption{Cycle count for running all nodes in the best mapping given by RL model over 50000 epochs. 
   PPO baseline MLP model and GGA model were evaluated with computation graphs with increasing number of nodes. 
-  A larger device configuration with 64 tiles was used for experiments with computation graphs with 40 and 50 nodes. }
+  A larger device configuration with 64 tiles was used for experiments with SDF graphs with 40 and 50 nodes. }
   \label{fig:nodes_graph}
 \end{figure}
 
@@ -37,7 +37,7 @@ The cycle count is number of SE execution steps taken to process all nodes for a
 \subsection{Global Graph Attention (GGA)} \label{sec:GGA_result}
 
 In Fig. \ref{fig:ifft_rewards}, we see the addition of GGA module provides improved reward and sample efficiency for the IFFT application. 
-The node and states changes for each iteration over all nodes in the computation graph. The GGA module provides a representation of the entire graph while placing each node.
+The node and states changes for each iteration over all nodes in the SDF graph. The GGA module provides a representation of the entire graph while placing each node.
 
 \begin{figure}[h]
   \centering
@@ -59,7 +59,7 @@ On the other hand, when placing the nodes randomly, sometimes nodes get placed b
   \centering
   \includegraphics[width=\linewidth]{fig/plot_ordered.pdf}
   \caption{Iterating nodes in topological ordering results in higher reward and eases the placement task. 
- The blue line is the reward curve for when nodes were randomly selected for placement. The red line is the reward curve for when nodes were iterated upon in topological order. The task involved is of placing 15 nodes computation graph in a device with 16 tiles.}
+ The blue line is the reward curve for when nodes were randomly selected for placement. The red line is the reward curve for when nodes were iterated upon in topological order. The task involved is of placing 15 nodes SDF graph in a device with 16 tiles.}
   \label{fig:ordered_placement}
 \end{figure}
 
