--- a/doc/sections/Results.tex
+++ b/doc/sections/Results.tex
@@ -2,7 +2,7 @@
 The aim of this section is to evaluate the RL framework for mapping workload to Streaming Engine under training and finetuning scenarios. 
 We also analyse the effect of the different components of the RL model, such as: GGA module, output masking and node iteration ordering.
 
-The implemented RL approach was able to successfully map the SDF graphs for different programs such as vector add, distance calculation function and IFFT. 
+The implemented RL approach was able to successfully map the SDF graphs for different programs such as vector add, distance calculation function and Inverse Fast Fourier Transform (IFFT). 
 IFFT is widely used by several algorithms and its SDF graph is shown in Fig. \ref{fig:ifft_graph} 
 The SE device configuration for the following experiments used 16 tiles and a maximum of 6 Initiation Interval (II).
 Other SE device configurations are possible.
@@ -79,7 +79,7 @@ Figure \ref{fig:mask_nomask} demonstrates that masking improves the reward and s
   \label{fig:mask_nomask}
 \end{figure}
 
-\subsection{Pretrain and Inferencing}
+\subsection{Pretrain and finetuning}
 
 After training the RL model on various SDF graphs, the RL model can be used for fine-tunning on specific graph or for inferencing.
 In figure \ref{fig:pretrain_ifft}, the RL model was pre-trained with random collection of SDF graphs and then fine-tuned for the IFFT application.
@@ -89,6 +89,6 @@ The model is able to reuse some of the previous experience of placing nodes for 
 \begin{figure}[h]
   \centering
   \includegraphics[width=\linewidth]{fig/pretrain_ifft.pdf}
-  \caption{.}
+  \caption{Comparison between training RL model from scratch (red) versus finetuning a model pretrained on random graphs (blue). }
   \label{fig:pretrain_ifft}
 \end{figure}
