--- a/doc/sections/Conclusion.tex
+++ b/doc/sections/Conclusion.tex
@@ -4,7 +4,7 @@ It improves on the total time required to get a mapping as compared to the exist
 The techniques presented could be applied to other applications such as chip placement, which is worth exploring in the future. 
 Our future work also includes: 
 \begin{itemize}
-    \item Optimizing training methods to obtain mappings for problems like IFFT which have a bigger search space than currently used SDF graphs. 
+    \item Optimizing training methods to obtain mappings for problems like FFT which have a bigger search space than currently used SDF graphs. 
     \item Increasing sample efficiency of learning methods and improving the simulation environment for the SE by adding more constraints. 
     \item Studying the impact of reusing the trained networks across graph rather than training a network from scratch for a given SDF graph.
     \item Integration of RL mapper into the SE toolset.
