--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -695,3 +695,10 @@ Publisher: Association for Computing Machinery},
   journal={arXiv preprint arXiv:1707.06347},
   year={2017}
 }
+
+@ARTICLE{814659,  
+author={Rockmore, D.N.},  
+journal={Computing in Science   Engineering},   
+title={The FFT: an algorithm the whole family can use},   
+year={2000},  volume={2},  number={1},  pages={60-64},  
+doi={10.1109/5992.814659}}
