--- a/doc/sections/Results.tex
+++ b/doc/sections/Results.tex
@@ -2,15 +2,19 @@
 The aim of this section is to evaluate the RL framework for mapping workload to Streaming Engine under training and finetuning scenarios. 
 We also analyse the effect of the different components of the RL model, such as: GGA module, output masking and node iteration ordering.
 
-The implemented RL approach was able to successfully map the SDF graphs for different programs such as vector add, distance calculation function and Inverse Fast Fourier Transform (IFFT). 
-IFFT is widely used by several algorithms and its SDF graph is shown in Fig. \ref{fig:ifft_graph} 
+The implemented RL approach was able to successfully map the SDF graphs for different programs such as vector add, distance calculation function and Fast Fourier Transform (FFT). 
+FFT is widely used by several applications such as digital signal and image precessing, pattern recognition, solving partial differential equations, error-correcting codes, many others\cite{814659}.
+FFT has time complexity of $\mathcal{O}(N\log{N})$ and two nested loops.
+The outer loop and inner loop have time complexity of $\mathcal{O}(\log{N})$ and $\mathcal{O}(N)$ respectively.
+The inner loop is targeted for acceleration.
+The inner loop code is optimized and broken down into six SDFs which are shown in Fig. \ref{fig:ifft_graph}.
 The SE device configuration for the following experiments used 16 tiles and a maximum of 6 Initiation Interval (II).
 Other SE device configurations are possible.
 
 \begin{figure}[h]
   \centering
   \includegraphics[width=\linewidth]{fig/ifft_graph.pdf}
-  \caption{IFFT application SDF graph.}
+  \caption{FFT application SDF graph.}
   \label{fig:ifft_graph}
 \end{figure}
 
@@ -36,13 +40,13 @@ The cycle count is number of SE execution steps taken to process all nodes for a
 
 \subsection{Global Graph Attention (GGA)} \label{sec:GGA_result}
 
-In Fig. \ref{fig:ifft_rewards}, we see the addition of GGA module provides improved reward and sample efficiency for the IFFT application. 
+In Fig. \ref{fig:ifft_rewards}, we see the addition of GGA module provides improved reward and sample efficiency for the FFT application. 
 The node and states changes for each iteration over all nodes in the SDF graph. The GGA module provides a representation of the entire graph while placing each node.
 
 \begin{figure}[h]
   \centering
   \includegraphics[width=\linewidth]{fig/plot_gnn_atten_ppo.pdf}
-  \caption{Effect of using Global Graph Attention (GGA) module for mapping the IFFT application on device with 16 tiles. 
+  \caption{Effect of using Global Graph Attention (GGA) module for mapping the FFT application on device with 16 tiles. 
   GGA module provides better sample efficiency and higher reward after training. }
   \label{fig:ifft_rewards}
 \end{figure}
@@ -82,7 +86,7 @@ Figure \ref{fig:mask_nomask} demonstrates that masking improves the reward and s
 \subsection{Pretrain and finetuning}
 
 After training the RL model on various SDF graphs, the RL model can be used for fine-tunning on specific graph or for inferencing.
-In figure \ref{fig:pretrain_ifft}, the RL model was pre-trained with random collection of SDF graphs and then fine-tuned for the IFFT application.
+In figure \ref{fig:pretrain_ifft}, the RL model was pre-trained with random collection of SDF graphs and then fine-tuned for the FFT application.
 The initial and final reward of the fine tuned RL model is higher than training the model from scratch.
 The model is able to reuse some of the previous experience of placing nodes for random input graphs.
 
