--- a/doc/sections/se.tex
+++ b/doc/sections/se.tex
@@ -23,7 +23,7 @@ These asynchronous operations include initiating SDF operations, transferring da
   \label{fig:se_diagram}
 \end{figure}
 
-As shown in the Fig. \ref{fig:se_diagram}, tiles are interconnected in a one by sixteen configuration.
+As shown in the Fig. \ref{fig:se_diagram}, tiles are interconnected in a $1 \times 16$ configuration.
 The SF is used to connect a tile to another tile one hop above it, a tile two hops above it, a tile one hop below it and a tile two hops below it.
 Information is transferred over the SF with a deterministic latency. 
 Each tile acts independently, streaming data through internal memory and MS/AL units, to other tiles over the SF and AF.
