--- a/doc/sections/Results.tex
+++ b/doc/sections/Results.tex
@@ -3,7 +3,7 @@ The aim of this section is to evaluate the RL framework for mapping workload to 
 We also analyse the effect of the different components of the RL model, such as: GGA module, output masking and node iteration ordering.
 
 The implemented RL approach was able to successfully map the SDF graphs for different programs such as vector add, distance calculation function and Fast Fourier Transform (FFT). 
-FFT is widely used by several applications such as digital signal and image precessing, pattern recognition, solving partial differential equations, error-correcting codes, many others\cite{814659}.
+FFT is widely used by several applications such as digital signal and image precessing, pattern recognition, solving partial differential equations, error-correcting codes, and many others\cite{814659}.
 FFT has time complexity of $\mathcal{O}(N\log{N})$ and two nested loops.
 The outer loop and inner loop have time complexity of $\mathcal{O}(\log{N})$ and $\mathcal{O}(N)$ respectively.
 The inner loop is targeted for acceleration.
