--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -55,14 +55,14 @@
 %% the commands and values with those provided to you when you
 %% complete the rights form.
 \setcopyright{acmcopyright}
-\copyrightyear{2018}
-\acmYear{2018}
+\copyrightyear{2022}
+\acmYear{2022}
 \acmDOI{XXXXXXX.XXXXXXX}
 
 %% These commands are for a PROCEEDINGS abstract or paper.
-\acmConference[Conference acronym 'XX]{Make sure to enter the correct
-  conference title from your rights confirmation emai}{June 03--05,
-  2018}{Woodstock, NY}
+\acmConference[SC '22]{Make sure to enter the correct
+  conference title from your rights confirmation emai}{Novemeber 13--18,
+  2022}{Dallas, Texas, USA}
 %
 %  Uncomment \acmBooktitle if th title of the proceedings is different
 %  from ``Proceedings of ...''!
@@ -99,7 +99,7 @@
 %%
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
-\title{Reinforcement learning approach for mapping applications to dataflow-based Coarse-Grained Reconfigurable Array }
+\title[Reinforcement learning approach for mapping applications to dataflow-based CGRA]{Reinforcement learning approach for mapping applications to dataflow-based Coarse-Grained Reconfigurable Array}
 
 %%
 %% The "author" command and its associated commands are used to define
