--- a/doc/sections/Related_work.tex
+++ b/doc/sections/Related_work.tex
@@ -49,5 +49,5 @@ In both of these works, the aim is similar to us i.e. to reduce the manual labor
 
 A key difference between our work and \cite{zhou2019gdp} is that our strategy is to place one node at a time, instead of generating a whole assignment per iteration. 
 This allows our model to break down the placement problem into sub-problems and also allows the framework to start from a different starting configuration. 
-For example, if some nodes are already placed by some other algorithm such as bruthe force, the RL mapper can place the remaining nodes. 
+For example, if some nodes are already placed by some other algorithm such as brute force, the RL mapper can place the remaining nodes. 
 This approach also allows us to obtain more data during the sampling phase which consists of partial assignments, instead of only saving one sample for an entire sequence of nodes.
