--- a/doc/sections/Introduction.tex
+++ b/doc/sections/Introduction.tex
@@ -47,7 +47,7 @@ Creating the mappings manually or using brute force algorithms takes time and lo
 This process also adds assumptions that reduce the search space, trading off optimization possibilities.  
 
 In this work we propose a Deep Reinforcement Learning (RL) method to explore and find optimal mappings in an unsupervised manner. 
-Using the Proximal Policy Optimization (PPO) method we train a neural network model to place instructions onto the SE tiles guided by a reward function in an evironment that models the SE device and its constraints. 
+Using the Proximal Policy Optimization (PPO) method we train a neural network model to place instructions onto the SE tiles guided by a reward function in an environment that models the SE device and its constraints. 
 The trained model is able to create valid mappings for the SE by learning about the structure of the problem domain. 
 
 
