--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -60,8 +60,7 @@
 \acmDOI{XXXXXXX.XXXXXXX}
 
 %% These commands are for a PROCEEDINGS abstract or paper.
-\acmConference[SC '22]{Make sure to enter the correct
-  conference title from your rights confirmation emai}{Novemeber 13--18,
+\acmConference[SC '22]{Super Computing}{November 13--18,
   2022}{Dallas, Texas, USA}
 %
 %  Uncomment \acmBooktitle if th title of the proceedings is different
