--- a/doc/sections/Conclusion.tex
+++ b/doc/sections/Conclusion.tex
@@ -8,4 +8,5 @@ Our future work also includes:
     \item Increasing sample efficiency of learning methods and improving the simulation environment for the SE by adding more constraints. 
     \item Studying the impact of reusing the trained networks across graph rather than training a network from scratch for a given SDF graph.
     \item Integration of RL mapper into the SE toolset.
+    \item \todo{Exploring the proposed technique for}
 \end{itemize}
